2010-07-09  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Assertion failure in String::utf8() for certain invalid UTF16 inputs
        https://bugs.webkit.org/show_bug.cgi?id=41983

        * wtf/text/WTFString.cpp:
        (WebCore::String::utf8):
         - Fixed assertion when sourceExhausted is returned from convertUTF16ToUTF8.

2010-07-09  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Remove a couple of excess writes from the lexer
        https://bugs.webkit.org/show_bug.cgi?id=41981

        Remove a couple of fields from JSTokenInfo, and rename the remaining ones
        to something more accurate

        * parser/JSParser.cpp:
        (JSC::JSParser::next):
        (JSC::JSParser::tokenStart):
        (JSC::JSParser::tokenLine):
        (JSC::JSParser::tokenEnd):
        * parser/JSParser.h:
        (JSC::JSTokenInfo::JSTokenInfo):
        * parser/Lexer.cpp:
        (JSC::Lexer::lex):

2010-07-08  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Property declarations in an object literal should not consider the prototype chain when being added to the new object
        https://bugs.webkit.org/show_bug.cgi?id=41929

        To fix this all we need to do is ensure that all new properties are
        added with putDirect rather than a fully generic call to put.  This
        is safe as an object literal is by definition going to produce a
        completely normal object.

        Rather than duplicating all the put_by_id logic we add an additional
        flag to op_put_by_id to indicate it should be using putDirect.  In
        the interpreter this adds a runtime branch, but in the jit this is
        essentially free as the branch is taken at compile time.  This does
        actually improve object literal creation time even in the interpreter
        as we no longer need to walk the prototype chain to verify that the
        cached put is safe.
